# nixide

./: .clang-format  .clang-tidy  .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix  rustfmt.toml
docs/: ref.md
nixide/: Cargo.toml  build.rs
nixide-sys/: Cargo.toml  build.rs  lib.rs
nixide-sys/include/: nix-expr.h  nix-fetchers.h  nix-flake.h  nix-main.h  nix-store.h  nix-util.h  wrapper.h
nixide-sys/libnixide-c/: nixide_api_fetchers.cc  nixide_api_fetchers.h  nixide_api_flake.cc  nixide_api_flake.h
nixide-sys/src/: lib.rs
nixide-sys/src/exts/: expr.rs  main.rs  mod.rs  util.rs
nixide-sys/tests/: README.md  eval.rs  flake.rs  memory.rs  primop.rs  store.rs  util.rs
nixide/src/: context.rs  error.rs  init.rs  lib.rs  nix_settings.rs  verbosity.rs  version.rs
nixide/src/errors/: context.rs  error.rs  mod.rs  nix_error.rs
nixide/src/expr/: eval_state.rs  eval_state_builder.rs  evalstate.rs  evalstatebuilder.rs  mod.rs  realised_string.rs  tests.rs  value.rs  valuetype.rs
nixide/src/expr/values/: attrs.rs  bool.rs  float.rs  function.rs  int.rs  list.rs  mod.rs  null.rs  path.rs  string.rs  thunk.rs
nixide/src/flake/: eval_state_builder_ext.rs  fetchers_settings.rs  flake_lock_flags.rs  flake_reference.rs  flake_reference_parse_flags.rs  flake_settings.rs  flakeref.rs  locked_flake.rs  mod.rs
nixide/src/stdext/: cchar_ptr.rs  cchar_ptr_ext.rs  mod.rs  slice.rs
nixide/src/store/: mod.rs  path.rs  tests.rs
nixide/src/util/: bindings.rs  cchar_nix_ext.rs  lazy_array.rs  mod.rs  panic.rs  wrap.rs  wrappers.rs
