[package]
name         = "nixide-sys"
description  = "Unsafe direct FFI bindings to libnix C API"
version      = "0.1.0"
readme       = "../README.md"
license      = "GPL-3.0"
repository   = "https://codeberg.org/luminary/nixide"
authors      = [ "_cry64 <them@dobutterfliescry.net>" ]

edition      = "2024"
build        = "build.rs"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[lib]
path = "lib.rs"

# NOTE: `[features]` have a 1-1 correspondence to the
# NOTE: shared libraries produced by the Nix C API.
[features]
default = ["nix-util-c"]
nix-util-c = []
nix-store-c = []
nix-expr-c = []
nix-fetchers-c = []
nix-flake-c = []
nix-main-c = []

[build-dependencies]
bindgen              = { default-features = false, features = [ "logging", "runtime" ], version = "0.72.1" }
doxygen-bindgen      = "0.1.3"
pkg-config.workspace = true
cc.workspace         = true

[dev-dependencies]
serial_test = "3.4.0"
