[package]
name         = "nixide"
description  = "Safe & oxidized bindings to the Nix API"
version      = "0.1.0"
readme       = "../README.md"
license      = "GPL-3.0"
repository   = "https://codeberg.org/luminary/nixide"
authors      = [
    "_cry64 <them@dobutterfliescry.net>",
    "foxxyora <foxxyora@noreply.codeberg.org>",
]
edition      = "2024"

[lib]
path = "src/lib.rs"

[features]
default = []
store = ["nixide-sys/nix-store-c"]
expr = ["store", "nixide-sys/nix-expr-c"]
flake = ["store", "nixide-sys/nix-flake-c", "nixide-sys/nix-fetchers-c"]

[dependencies]
libc = "0.2.183"
stdext = "0.3.3"
ctor = "0.6.3"
nixide-sys = { path = "../nixide-sys", version = "0.1.0", features = ["nix-util-c", "nix-main-c"]}

[dev-dependencies]
serial_test = "3.4.0"
